force-app/zurich-base/main/default/objects/TransformerEquivalences__mdt/TransformerEquivalences__mdt.object-meta.xml
<CustomObject>
    <description>Representa para de equivalencias entre valores de campos de una Entidad y valores de Salesforce. Principalemente se usa para la equivalencia entre un valor de campo y el RecordType</description>
    <label>TransformerEquivalence</label>
    <pluralLabel>TransformerEquivalences</pluralLabel>
</CustomObject>