force-app/zurich-base/main/default/objects/TransformerEquivalences__mdt/fields/Origin__c.field-meta.xml
<CustomField>
    <fullName>Origin__c</fullName>
    <description>Representa el valor de Origen de la transformacion</description>
    <label>Origin</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>INFO</fullName>
                <default>true</default>
                <label>INFO</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>