force-app/zurich-base/main/default/objects/TransformerEquivalences__mdt/fields/OriginEntity__c.field-meta.xml
<CustomField>
    <fullName>OriginEntity__c</fullName>
    <description>El nombre de la entidad en el origen de datos no en Salesforce.</description>
    <label>OriginEntity</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>