force-app/zurich-base/main/default/objects/TransformerEquivalences__mdt/fields/OriginKey__c.field-meta.xml
<CustomField>
    <fullName>OriginKey__c</fullName>
    <description>Valor clave en el origen de datos</description>
    <label>OriginKey</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>