force-app/zurich-base/main/default/objects/TransformerEquivalences__mdt/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <description>Valor en salesforce para el valor de la clave en el origen de datos.  Por ejemplo el developer name de un tipo de registro</description>
    <label>Value</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>